sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:16: error: 'while' expected but 'var' found.
    var i=0
    ^AlgCombSort11:17: error: '(' expected but ';' found.
    while(i+ecart < n){
^AlgCombSort11:27: error: illegal start of simple expression
}
^AlgCombSort11:31: error: Unmatched closing brace '}' ignored here
}
^